removed unused service endpoint
